[gd_scene load_steps=4 format=3 uid="uid://dijji12gvss7h"]

[ext_resource type="Script" uid="uid://dh0knpc7tu3b0" path="res://Entities/Towers/_TemplateTower/template_tower.gd" id="1_kihhs"]
[ext_resource type="Script" uid="uid://cxv8nopqo05b7" path="res://Entities/Towers/_TemplateTower/buff_manager.gd" id="2_5sk8p"]
[ext_resource type="StyleBox" uid="uid://6m1q8jw2p6hi" path="res://Themes/Styleboxes/new_style_stun_flat.tres" id="3_13woj"]

[node name="TemplateTower" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_kihhs")

[node name="BuffManager" type="Node" parent="."]
script = ExtResource("2_5sk8p")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="Range" type="Area2D" parent="."]
z_index = -1
collision_mask = 2

[node name="RangeShape" type="CollisionPolygon2D" parent="Range"]
polygon = PackedVector2Array(0, -144, 288, 0, 0, 144, -288, 0)

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="Muzzle" type="Marker2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BuffBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 10)
theme_override_styles/fill = ExtResource("3_13woj")
value = 50.0
show_percentage = false

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
